# mskcc-python-lecture-notes

./: .gitignore  README.md  pyproject.toml
modules/: module_01.md  module_02.md  module_03.md  module_04.md  module_05.md  module_06.md  module_07.md  module_08.md
modules/assignments/assignment_01/: assignment_01.md
syllabus/: Intro to Scientific Python Syllabus.md
yearbook/2025/: Bailey_Levin.md  Faye_Li.md  Mohammed_Mutaher.md  README.md  carleigh_sussman.md  christina_ta.md  eleanor_pope.md  karina_magnus.md  lauren_mcIlhenny.md  stephanie_tarrab_hidary.md  sylvia_illouz.md  teon_brooks.md
